<resources>
    <string name="app_name">CyberChat1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="last_message_in_the_chat_here">Last Message in the chat here</string>
    <string name="_9_10_pm">9:10 PM</string>
    <string name="receiver_message_here">Receiver Message Here</string>
    <string name="sender_message_here">Sender Message Here</string>
    <string name="enter_your_message">Enter Your Message...</string>
    <string name="send">send</string>
    <string name="online">online</string>
    <string name="_0547078933">0547078933</string>
    <string name="contact_name">Contact Name</string>
</resources>